data/derived/sp14/progs/unify/prog1232.ml.out
Characters 88-90:
  | hd::tl -> [a + hd]@[tl]
                        ^^
Error: This expression has type int list
       but an expression was expected of type int
